overflow scroll to prevent shifting

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -46,6 +46,7 @@ body {
     background-color: var(--c-background);
     word-wrap: break-word;
     overflow-wrap: break-word;
+    overflow-y: scroll;
     line-height: 1.5;
     color: var(--c-text);
     font-size: 16px;
